--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
       <img src="./images/rocket.png" alt="Image not found">
     </div>
   </section>
-  <script src="./JS/openmenu.js"></script>
+  <script type="module" src="./JS/openmenu.js"></script>
 </body>
 </html>
